changed title and sponsorship of the award

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Editor-Selected JASA Reproducibility Award"
+  title: "JASA Reproducibility Award"
   navbar:
     right:
       - about.qmd
