--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,8 @@ website:
       - about.qmd
       - href: index.qmd
         text: About the award 
+      - href: awardees.qmd  
+        text: Awardees
       
 format:
   html:
